[package]
name = "purewasm"
edition = "2021"
description = "Pure WASM bindings"
version = "0.1.0"
authors = ["adem caglin<adem.caglin@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/purewasm/rust-purewasm"
readme = "README.md"
keywords = ["idp2p", "wasm", "webassembly", "purewasm"]
categories = ["webassembly"]

[workspace]
members = [
    "core",
    "codec/cbor",
    "codec/json",
    "bindgen",
    "runtime",
    "runtime/wasmtime",
    "examples/module",
]

[profile.release]
lto = true
opt-level = "z"
strip = "symbols"

[dependencies]
purewasm-cbor = { workspace = true, optional = true }
purewasm-bindgen = { workspace = true, optional = true }
purewasm-runtime = { workspace = true, optional = true }

[workspace.dependencies]
serde = { version = "1.0.188", default-features = false, features = ["derive", "alloc"] }
purewasm-cbor = { path = "codec/cbor", version = "0.1.0" }
purewasm-json = { path = "codec/json", version = "0.1.0" }
purewasm-core = { path = "core", version = "0.1.0" }
purewasm-proc-macro = { path = "bindgen/proc-macro", version = "0.1.0" }
purewasm-bindgen = { path = "bindgen", version = "0.1.0" }
purewasm-runtime = { path = "runtime", version = "0.1.0" }
#purewasm-runtime-wasmtime = { path = "runtime/wasmtime", version = "0.1.0" }


