[package]
name = "purewasm"
edition = "2021"
description = "Pure WASM bindings"
version = "0.1.0"
authors = ["adem caglin<adem.caglin@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/purewasm/rust-purewasm"
readme = "README.md"
keywords = ["idp2p", "wasm", "webassembly", "purewasm"]
categories = ["webassembly"]

[workspace]
members = [
    "core",
    "bindgen",
    "runtime",
    "runtime/wasmtime",
    "examples/module",
]

[profile.release]
lto = true
opt-level = "z"
strip = "symbols"

[dependencies]
wasmtime = { workspace = true }
purewasm-core = { workspace = true }
ciborium = { workspace = true, default-features = false }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
serde = { workspace = true, default-features = false, features = [
    "derive",
    "alloc",
] }
purewasm-runtime = { workspace = true, optional = true }
purewasm-runtime-wasmtime = { workspace = true, optional = true }


[workspace.dependencies]
serde = { version = "1.0.193", default-features = false, features = [
    "derive",
    "alloc",
] }
wasmtime =  { version = "16.0.0" }
ciborium = { version = "0.2.1", default-features = false }
serde_json = { version = "1.0.109", default-features = false, features = ["alloc"] }
purewasm-core = { path = "core", version = "0.1.0" }
purewasm-proc-macro = { path = "bindgen/proc-macro", version = "0.1.0" }
purewasm-bindgen = { path = "bindgen", version = "0.1.0" }
purewasm-runtime = { path = "runtime", version = "0.1.0" }
purewasm-runtime-wasmtime = { path = "runtime/wasmtime", version = "0.1.0" }
