[package]
name = "purewasm-bindgen"
version = "0.1.0"
edition = "2021"
description = "Pure WASM bindings"
authors = ["adem caglin<adem.caglin@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/purewasm/rust-purewasm"
readme = "README.md"
keywords = ["idp2p", "wasm", "webassembly", "purewasm"]
categories = ["webassembly"]

[features]
json = ["dep:serde_json"]

[dependencies]
cfg-if = "1.0.0"
lol_alloc = "0.4.0"
purewasm-proc-macro = { workspace = true }
purewasm-core = { workspace = true}
ciborium = { workspace = true, default-features = false }
serde_json = { workspace = true, optional = true}
serde = { workspace = true, default-features = false, features = [
    "derive",
    "alloc",
] }
