[package]
name = "wasmledger-bindgen"
version = "0.1.0"
edition = "2021"
description = "Wasm Ledger bindings"
authors = ["adem caglin<adem.caglin@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/purewasm/rust-wasmledger"
readme = "README.md"
keywords = ["wasm", "webassembly", "purewasm", "wasmledger"]
categories = ["webassembly"]

[features]
cbor = ["dep:ciborium"]
json = ["dep:serde_json"]

[dependencies]
cfg-if = "1.0.0"
lol_alloc = "0.4.0"
wasmledger-bindgen-macro = { workspace = true }
ciborium = { workspace = true, default-features = false, optional = true}
serde_json = { workspace = true, optional = true}
serde = { workspace = true, default-features = false, features = [
    "derive",
    "alloc",
] }
