[package]
name = "purewasm-core"
version = "0.1.0"
edition = "2021"
description = "Pure WASM bindings"
authors = ["adem caglin<adem.caglin@gmail.com>"]
license = "APACHE 2.0"
repository = "https://github.com/purewasm/rust-purewasm"
readme = "README.md"
keywords = ["idp2p", "wasm", "webassembly", "purewasm"]
categories = ["webassembly"]

[dependencies]
serde = { workspace = true, default-features = false }
