[package]
name = "purewasm-proc-macro"
version = "0.1.0"
edition = "2021"
description = "Pure WASM bindings"
authors = ["adem caglin<adem.caglin@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/purewasm/rust-purewasm"
readme = "README.md"
keywords = ["idp2p", "wasm", "webassembly", "purewasm"]
categories = ["webassembly"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
proc-macro2 = "1.0.66"
syn = { version = "2.0.29", features = ["full"] }
