[package]
name = "purewasm-cbor"
version = "0.1.0"
edition = "2021"
description = "Pure WASM bindings"
authors = ["adem caglin<adem.caglin@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/purewasm/rust-purewasm"
readme = "README.md"
keywords = ["idp2p", "wasm", "webassembly", "purewasm"]
categories = ["webassembly"]

[dependencies]
purewasm-core = {  workspace = true }
serde = { workspace = true, default-features = false }
ciborium = { version = "0.2.1", default-features = false }



