[package]
name = "purewasm-json"
version = "0.1.0"
edition = "2021"
description = "Pure WASM bindings"
authors = ["adem caglin<adem.caglin@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/purewasm/rust-purewasm"
readme = "README.md"
keywords = ["idp2p", "wasm", "webassembly", "purewasm"]
categories = ["webassembly"]

[dependencies]
purewasm-core = { workspace = true }
serde = { workspace = true, default-features = false }
serde_json = { version = "1.0.105", default-features = false, features = ["alloc"] }



