[package]
name = "purewasm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = { version = "0.10.7", default-features = false }
serde_bytes = { version = "0.11.12", default-features = false, features=["alloc"] }
serde = { version = "1.0.188", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.105", default-features = false, features = ["alloc"], optional = true }
ciborium = { version = "0.2.1", default-features = false, optional = true }
lol_alloc = "0.4.0"

[features]
cbor = ["dep:ciborium"]
json = ["dep:serde_json"]

[dev-dependencies]
purewasm-core = { path = ".", features = ["cbor", "json"] }