[package]
name = "purewasm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = { version = "0.10.7", default-features = false }
serde_bytes = { version = "0.11.12", default-features = false, features=["alloc"] }
serde = { version = "1.0.188", default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
purewasm-core = { path = "."}