[package]
name = "purewasm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
purewasm-bindgen= { path = "bindgen" }
purewasm-error= { path = "../error" }
lol_alloc = "0.4.0"
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
purewasm-core = { path = "."}