[package]
name = "purewasm-module"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
strip = "symbols"

[dependencies]
purewasm-bindgen = { path = "../../bindgen", features = ["cbor"] }
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
