[package]
name = "wasmledger-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
strip = "symbols"

[dependencies]
wasmledger-bindgen = { workspace = true, default-features = false, features = ["cbor"]}
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
