[package]
name = "wasmid"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"
strip = "symbols"

[lib]
crate-type = ["cdylib"]

[dependencies]
purewasm-core = {path = "../crates/core" }
purewasm-model = {path = "../crates/model" }
purewasm-codec = {path = "../crates/codec", features = ["cbor"] }
purewasm-crypto = { path = "../crates/crypto" }

serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
ciborium = { version = "0.2.1", default-features = false }