[package]
name = "purewasm-wasmtime"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "12.0.1"
purewasm-core = { path = "../../core" }
purewasm-cbor = { path = "../../codec/cbor"}
purewasm-json = { path = "../../codec/json" }
serde = { workspace = true, default-features = false, features = [
    "derive",
    "alloc",
] }