[package]
name = "purewasm-simple-module"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"
strip = "symbols"

[lib]
crate-type = ["cdylib"]

[dependencies]
purewasm-core = { version = "0.1.0", path = "../../../core", features=["cbor"] }
purewasm-bindgen = { version = "0.1.0", path = "../../../bindgen" }