[package]
name = "purewasm-simple-module"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"
strip = "symbols"

[lib]
crate-type = ["cdylib"]

[dependencies]
purewasm-codec = { path = "../../../codec", features=["cbor"] }
purewasm-core = { path = "../../../core" }
purewasm-bindgen = { path = "../../../bindgen" }
purewasm-simple-shared = {  path = "../shared" }