[package]
name = "wasmid-proof"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = { workspace = true, default-features = false }
rs_merkle = { version = "1.4.1", default-features = false }
serde = { workspace = true, default-features = false }
wasmid-core = { path = "../core" }
purewasm-core = {path = "../../../core" }
purewasm-codec = {path = "../../../codec", features = ["cbor"] }
